--- a/src/app/pages/new-student/new-student.page.html
+++ b/src/app/pages/new-student/new-student.page.html
@@ -1,12 +1,10 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-title>newStudent</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
   <ion-grid>
     <form [formGroup]="myForm">
       <ion-row color="primary" justify-content-center>
