--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,7 +12,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">Contraseña:</ion-label>
-      <ion-input type="text" formControlName="password"></ion-input>
+      <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
     <ion-button (click)="findUser()" expand="block" fill="clear" shape="round">
       Iniciar Sesión
