--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Registrar Usuario
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -11,9 +11,6 @@
     <form [formGroup]="myForm">
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-          <div text-center>
-            <h3>Login</h3>
-          </div>
           <div padding>
             <ion-item>
               <ion-label position="floating">Nombre:</ion-label>
