--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,38 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Usuarios
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-list>
+    <ion-item-sliding *ngFor="let student of students">
+      <ion-item-options side="start">
+        <ion-item-option color="secondary">
+          <ion-icon name="checkmark"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+      <ion-item>
+        <ion-label>
+          <h2>
+            <strong>{{student.name}}</strong>
+            <ion-chip color="secondary" *ngIf="student.active" class="ion-float-right">
+              <ion-label>Activo</ion-label>
+            </ion-chip>
+            <ion-chip color="danger" *ngIf="!student.active" class="ion-float-right">
+              <ion-label>Inactivo</ion-label>
+            </ion-chip>
+          </h2>
+          <h3>{{student.controlNumber}}</h3>
+        </ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger">
+          <ion-icon name="close"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
