--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,15 +1,13 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Estudiantes Activos
-    </ion-title>
+    <ion-title>Estudiantes Inactivos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
   <ion-list>
     <ion-item-sliding *ngFor="let student of students">
-      <ion-item *ngIf="student.active">
+      <ion-item *ngIf="!student.active">
         <ion-item-options side="start">
           <ion-item-option color="secondary">
             <ion-icon name="checkmark"></ion-icon>
