--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,8 +12,13 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="person-add-outline"></ion-icon>
+      <ion-label>Activos</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab4">
+      <ion-icon name="person-remove-outline"></ion-icon>
+      <ion-label>Inactivos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
