--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,7 +8,12 @@
 
 <ion-content [fullscreen]="true">
   <ion-list>
-    <ion-item-sliding *ngFor="let student of students">
+    <ion-item-sliding *ngFor="let student of students; let i = index">
+      <ion-item-options side="end">
+        <ion-item-option (click)="utils.showDetails(student)">
+          Detalles
+        </ion-item-option>
+      </ion-item-options>
       <ion-item>
         <ion-label>
           <h2>
