--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,12 +9,12 @@
 <ion-content [fullscreen]="true">
   <ion-list>
     <ion-item-sliding *ngFor="let student of students">
+      <ion-item-options side="end">
+        <ion-item-option (click)="utils.showDetails(student)">
+          Detalles
+        </ion-item-option>
+      </ion-item-options>
       <ion-item *ngIf="student.active">
-        <ion-item-options side="start">
-          <ion-item-option color="secondary">
-            <ion-icon name="checkmark"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
         <ion-item>
           <ion-label>
             <h2>
