--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,9 +9,9 @@
 <ion-content [fullscreen]="true">
   <ion-list>
     <ion-item-sliding *ngFor="let student of students; let i = index">
-      <ion-item-options side="end">
-        <ion-item-option (click)="utils.showDetails(student)">
-          Detalles
+      <ion-item-options side="start">
+        <ion-item-option color="secondary" (click)="update(student, true)">
+          <ion-icon name="checkmark"></ion-icon>
         </ion-item-option>
       </ion-item-options>
       <ion-item>
@@ -28,6 +28,11 @@
           <h3>{{student.controlNumber}}</h3>
         </ion-label>
       </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="update(student, false)">
+          <ion-icon name="close"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
     </ion-item-sliding>
   </ion-list>
 </ion-content>
